--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.10",
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^4.9.5"
   }
 }
